--- a/frontend/src/Templates/temp_1.html
+++ b/frontend/src/Templates/temp_1.html
@@ -325,7 +325,7 @@
                 </div>
                 
                 <div class="photo-container">
-                    <!-- <img src="/src/assets/IMG-20250703-WA0017~2.jpg" alt="Sanjay Singh" class="photo"> -->
+                    <img src="" alt="Sanjay Singh" class="photo">
                 </div>
             </div>
         </div>
