--- a/frontend/src/Templates/temp_5.html
+++ b/frontend/src/Templates/temp_5.html
@@ -271,8 +271,7 @@
 
             <div class="photo-section">
                 <div class="photo-placeholder">
-                    Photo<br>
-                    (Replace with actual image)
+                    <img src="" alt="Photo" class="photo">
                 </div>
             </div>
         </div>
